--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="SR.jpg" alt="Suman Profile picture"></td>
+      <td><img src="SR.png" alt="Suman Profile picture"></td>
       <td><h1>SUMAN REDDY</h1><p><em>Founder and CEO of the <strong><a href="https://en.wikipedia.org/wiki/Brewery">MOB</a></strong>.</em></p>
         <p>I am an Upcoming Web developer. I love tea and will also start brewing my own beers.</p></td>
     </tr>
