--- a/Contact-me.html
+++ b/Contact-me.html
@@ -8,10 +8,10 @@
 
 <body>
   <h1>Contact Details</h1>
-  <p><strong>Address:Bengaluru,India</strong></p>
-  <p><strong>Ph No:7337755559</strong></p>
-  <p><strong>Email: suman.nreddy17@gmail.com</strong></p>
-<form class="" action="mailto:suman.nreddy17@outlook.com" method="post">
+  <p><strong>Address:India</strong></p>
+  <p><strong>Ph No:1234567890</strong></p>
+  <p><strong>Email: webdeveloper@gmail.com</strong></p>
+<form class="" action="mailto:webdeveloper@outlook.com" method="post">
 <label>Name:</label>
 <input type="text" name="" value=""><br>
 <label>Email:</label>
